--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,15 +15,13 @@ services:
         build:
           dockerfile: ./deploy/server.Dockerfile
         volumes:
-          - ./src/server/nginx.conf:/etc/nginx/conf.d/default.conf
+          - ./server/nginx.conf:/etc/nginx/conf.d/default.conf
         networks:
           - app-network
         depends_on:
           - core
         ports:
           - "80:80"
-
-
 
 networks:
   app-network:
