--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -8,7 +8,7 @@ server{
         proxy_set_header Host $host;
         proxy_set_header X-NgingX-Proxy true;
 
-        proxy_pass http://localhost:5100/;
+        proxy_pass http://osago_core:5100/;
     }
 
     location /docs {
@@ -17,9 +17,9 @@ server{
         proxy_set_header Host $host;
         proxy_set_header X-NgingX-Proxy true;
 
-        proxy_pass http://localhost:5100/docs;
+        proxy_pass http://osago_core:5100/docs;
     }
     location /openapi.json{
-        proxy_pass http://localhost:5100/openapi.json;
+        proxy_pass http://osago_core:5100/openapi.json;
     }
 }
