--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,10 @@
 services:
     core: 
-        container_name: osago_core
+        container_name: core
         build:
           dockerfile: ./deploy/osago.Dockerfile
         volumes:
           - ./src/osago:/app
-        networks:
-          - app-network
         env_file:
           - .env
         ports:
@@ -17,12 +15,8 @@ services:
           dockerfile: ./deploy/server.Dockerfile
         volumes:
           - ./server/nginx.conf:/etc/nginx/conf.d/default.conf
-        networks:
-          - app-network
         depends_on:
           - core
         ports:
           - "80:80"
 
-networks:
-  app-network:
